--- a/index.html
+++ b/index.html
@@ -454,6 +454,16 @@
           style="margin-top: 15px"
         >
           <div class="column is-full-width">
+            <h2 class="title is-3">Run ECON on <a href="https://stylegan-human.github.io/">SSHQ Dataset</a></h2>
+            <img class="center" src="./static/teaser/SHHQ.gif" height="250%" />
+          </div>
+        </div>
+
+        <div
+          class="columns is-centered has-text-centered"
+          style="margin-top: 15px"
+        >
+          <div class="column is-full-width">
             <h2 class="title is-3">Multi-person Reconstruction by ECON</h2>
             <img class="center" src="./static/teaser/crowd.gif" height="250%" />
           </div>
@@ -589,12 +599,16 @@
                 <a href="https://simongiebenhain.github.io/NPHM/">NPHM</a>.
               </p>
               <p style="text-align: center">
-                Please contact
-                <a href="mailto: yuliang.xiu@tue.mpg.de">Yuliang Xiu</a>
-                for technical questions. <br />
-                For commercial licensing, please contact
-                <a href="mailto: ps-licensing@tue.mpg.de">ps-licensing</a>, <a href="mailto: oezyurt@max-planck-innovation.de">Gökce Özyurt</a>,
-                <a href="mailto: naureen@meshcapade.com">Naureen Mahmood</a>,<br> <a href="mailto: ip@meshcapade.com">Meshcapade IP</a>, <a href="mailto: black@tue.mpg.de">Michael J. Black</a>.
+                For technical questions, please contact
+                <a href="mailto: yuliang.xiu@tue.mpg.de">Yuliang Xiu</a><br />
+                For commercial licensing, please contact the following:
+                <ul style="text-align: center;list-style: inside;">
+                <li><a href="mailto: ps-licensing@tue.mpg.de">ps-licensing</a></li> 
+                <li><a href="mailto: oezyurt@max-planck-innovation.de">Gökce Özyurt</a></li>
+                <li><a href="mailto: naureen@meshcapade.com">Naureen Mahmood</a></li>
+                <li><a href="mailto: ip@meshcapade.com">Meshcapade IP</a></li>
+                <li><a href="mailto: black@tue.mpg.de">Michael J. Black</a></li>
+              </ul>
               </p>
             </div>
           </div>
