--- a/index.html
+++ b/index.html
@@ -454,7 +454,10 @@
           style="margin-top: 15px"
         >
           <div class="column is-full-width">
-            <h2 class="title is-3">Run ECON on <a href="https://stylegan-human.github.io/">SSHQ Dataset</a></h2>
+            <h2 class="title is-3">
+              Run ECON on
+              <a href="https://stylegan-human.github.io/">SHHQ Dataset</a>
+            </h2>
             <img class="center" src="./static/teaser/SHHQ.gif" height="250%" />
           </div>
         </div>
@@ -516,7 +519,13 @@
                   >
                   completes the partial 3D data using implicit feature networks.
                 </li>
-                <li><a href="https://virtualhumans.mpi-inf.mpg.de/gin/">Any-Shot GIN</a> uses similar sandwich structure to estimate 3D shapes of novel classes from single RGB image. </li>
+                <li>
+                  <a href="https://virtualhumans.mpi-inf.mpg.de/gin/"
+                    >Any-Shot GIN</a
+                  >
+                  uses similar sandwich structure to estimate 3D shapes of novel
+                  classes from single RGB image.
+                </li>
               </ul>
             </div>
           </div>
@@ -545,14 +554,13 @@
               and innovation programme under the Marie Skłodowska-Curie grant
               agreement No.860768 (<a href="https://www.clipe-itn.eu/"
                 >CLIPE Project</a
-              >). MJB has received research gift funds from Adobe, Intel, Nvidia,
-              Meta/Facebook, and Amazon. MJB has financial interests in Amazon,
-              Datagen Technologies, and Meshcapade GmbH.
+              >). MJB has received research gift funds from Adobe, Intel,
+              Nvidia, Meta/Facebook, and Amazon. MJB has financial interests in
+              Amazon, Datagen Technologies, and Meshcapade GmbH.
             </div>
           </div>
         </div>
         <!-- Acknowledgments. -->
-
       </div>
     </section>
 
@@ -601,14 +609,13 @@
               <p style="text-align: center">
                 For technical questions, please contact
                 <a href="mailto: yuliang.xiu@tue.mpg.de">Yuliang Xiu</a><br />
-                For commercial licensing, please contact the following:
-                <ul style="text-align: center;list-style: inside;">
-                <li><a href="mailto: ps-licensing@tue.mpg.de">ps-licensing</a></li> 
-                <li><a href="mailto: oezyurt@max-planck-innovation.de">Gökce Özyurt</a></li>
-                <li><a href="mailto: naureen@meshcapade.com">Naureen Mahmood</a></li>
-                <li><a href="mailto: ip@meshcapade.com">Meshcapade IP</a></li>
-                <li><a href="mailto: black@tue.mpg.de">Michael J. Black</a></li>
-              </ul>
+                For commercial licensing, please contact the following:<br />
+                <a href="mailto: ps-licensing@tue.mpg.de">ps-licensing</a>,
+                <a href="mailto: oezyurt@max-planck-innovation.de"
+                  >Gökce Özyurt</a
+                >, <a href="mailto: naureen@meshcapade.com">Naureen Mahmood</a>,
+                <a href="mailto: ip@meshcapade.com">Meshcapade IP</a>,
+                <a href="mailto: black@tue.mpg.de">Michael J. Black</a>.
               </p>
             </div>
           </div>
