--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
               Run ECON on
               <a href="https://stylegan-human.github.io/">SHHQ Dataset</a>
             </h2>
-            <img class="center" src="./static/teaser/SHHQ.gif" height="250%" />
+            <img class="center" src="./static/teaser/SHHQ.gif" />
           </div>
         </div>
 
@@ -468,7 +468,7 @@
         >
           <div class="column is-full-width">
             <h2 class="title is-3">Multi-person Reconstruction by ECON</h2>
-            <img class="center" src="./static/teaser/crowd.gif" height="250%" />
+            <img class="center" src="./static/teaser/crowd.gif" width="200%" />
           </div>
         </div>
         <br /><br />
