--- a/index.html
+++ b/index.html
@@ -609,13 +609,8 @@
               <p style="text-align: center">
                 For technical questions, please contact
                 <a href="mailto: yuliang.xiu@tue.mpg.de">Yuliang Xiu</a><br />
-                For commercial licensing, please contact the following:<br />
-                <a href="mailto: ps-licensing@tue.mpg.de">ps-licensing</a>,
-                <a href="mailto: oezyurt@max-planck-innovation.de"
-                  >Gökce Özyurt</a
-                >, <a href="mailto: naureen@meshcapade.com">Naureen Mahmood</a>,
-                <a href="mailto: ip@meshcapade.com">Meshcapade IP</a>,
-                <a href="mailto: black@tue.mpg.de">Michael J. Black</a>.
+                For commercial licensing, please contact 
+                <a href="mailto: ps-licensing@tue.mpg.de">ps-licensing</a>
               </p>
             </div>
           </div>
