--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@
         spotLight4.position.set(0.0, 1, -2);
         const spotLight5 = new THREE.SpotLight(0xffffff, 0.05);
         spotLight5.position.set(0, -2.5, -1);
-        ////spotLight.position.multiplyScalar( 700 );
+        spotLight.position.multiplyScalar( 10 );
         scene.add(spotLight);
         scene.add(spotLight2);
         scene.add(spotLight3);
