--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                       <span class="icon">
                         <i class="fas fa-file-pdf"></i>
                       </span>
-                      <span>Paper</span>
+                      <span>Paper (coming soon)</span>
                     </a>
                   </span>
                   <span class="link-block">
