--- a/index.html
+++ b/index.html
@@ -454,18 +454,25 @@
           style="margin-top: 15px"
         >
           <div class="column is-full-width">
-            <h2 class="title is-3">Applications</h2>
+            <h2 class="title is-3">ECON Applications</h2>
             <table class="bordered">
               <tr>
-                <th><img src="./static/teaser/SHHQ.gif" class="rounded-corners"/></th>
-                <th><img src="./static/teaser/crowd.gif" class="rounded-corners"/></th>
+                <th>
+                  <img src="./static/teaser/SHHQ.gif" class="rounded-corners" />
+                </th>
+                <th>
+                  <img
+                    src="./static/teaser/crowd.gif"
+                    class="rounded-corners"
+                  />
+                </th>
               </tr>
               <tr>
                 <th>
-                  Run ECON on
+                  Pseudo 3D GT for
                   <a href="https://stylegan-human.github.io/">SHHQ Dataset</a>
                 </th>
-                <th>Multi-person Reconstruction by ECON</th>
+                <th>Multi-person reconstruction</th>
               </tr>
             </table>
           </div>
