--- a/index.html
+++ b/index.html
@@ -561,9 +561,12 @@
               and innovation programme under the Marie Skłodowska-Curie grant
               agreement No.860768 (<a href="https://www.clipe-itn.eu/"
                 >CLIPE Project</a
-              >). MJB has received research gift funds from Adobe, Intel,
-              Nvidia, Meta/Facebook, and Amazon. MJB has financial interests in
-              Amazon, Datagen Technologies, and Meshcapade GmbH.
+              >). <br /><br/>
+              MJB has received research gift funds from Adobe, Intel, Nvidia,
+              Meta/Facebook, and Amazon. MJB has financial interests in Amazon,
+              Datagen Technologies, and Meshcapade GmbH. While MJB is a
+              part-time employee of Meshcapade, his research was performed
+              solely at, and funded solely by, the Max Planck Society.
             </div>
           </div>
         </div>
