--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
         <h2 class="title">BibTeX</h2>
         <pre>
 <code>@misc{xiu2022econ,
-    title={ECON: Explicit Clothed humans Obtained from Normals},
+    title={{ECON: Explicit Clothed humans Obtained from Normals}},
     author={Xiu, Yuliang and Yang, Jinlong and Cao, Xu and Tzionas, Dimitrios and Black, Michael J.},
     year={2022}
     publisher={arXiv},
