--- a/index.html
+++ b/index.html
@@ -469,10 +469,10 @@
               </tr>
               <tr>
                 <th>
-                  Pseudo 3D GT for
+                  Pseudo 3D Ground-truth for
                   <a href="https://stylegan-human.github.io/">SHHQ Dataset</a>
                 </th>
-                <th>Multi-person reconstruction</th>
+                <th>Multi-person Reconstruction</th>
               </tr>
             </table>
           </div>
