--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
                   <!-- PDF Link. -->
                   <span class="link-block">
                     <a
-                      href=""
+                      href="https://arxiv.org/abs/2212.07422"
                       class="external-link button is-normal is-rounded is-dark"
                     >
                       <span class="icon">
                         <i class="fas fa-file-pdf"></i>
                       </span>
-                      <span>Paper (coming soon)</span>
+                      <span>Paper</span>
                     </a>
                   </span>
                   <span class="link-block">
