--- a/index.html
+++ b/index.html
@@ -578,12 +578,12 @@
       <div class="container is-max-desktop content">
         <h2 class="title">BibTeX</h2>
         <pre>
-<code>@misc{xiu2022econ,
-    title={{ECON: Explicit Clothed humans Obtained from Normals}},
-    author={Xiu, Yuliang and Yang, Jinlong and Cao, Xu and Tzionas, Dimitrios and Black, Michael J.},
-    year={2022}
-    publisher={arXiv},
-    primaryClass={cs.CV}
+<code>@article{xiu2022econ,
+  title={{ECON: Explicit Clothed humans Obtained from Normals}},
+  author={Xiu, Yuliang and Yang, Jinlong and Cao, Xu and Tzionas, Dimitrios and Black, Michael J.},
+  year={2022}
+  journal={{arXiv}:2212.07422},
+}
 }</code></pre>
       </div>
     </section>
