--- a/index.html
+++ b/index.html
@@ -187,7 +187,30 @@
                       <span>Code</span>
                     </a>
                   </span>
-                  <span class="link-block"></span>
+                  <span class="link-block">
+                    <a
+                      href="https://colab.research.google.com/drive/1YRgwoRCZIrSB2e7auEWFyG10Xzjbrbno?usp=sharing"
+                      class="external-link button is-normal is-rounded"
+                      style="background: sandybrown"
+                    >
+                      <span class="icon">
+                        <i class="fas fa-laptop-code"></i>
+                      </span>
+                      <span>Google Colab</span>
+                    </a>
+                  </span>
+                  <span class="link-block">
+                    <a
+                      href="https://discord.gg/Vqa7KBGRyk"
+                      class="external-link button is-normal is-rounded"
+                      style="background: #d462ff"
+                    >
+                      <span class="icon">
+                        <i class="fab fa-discord"></i>
+                      </span>
+                      <span>Discord</span>
+                    </a>
+                  </span>
                 </div>
               </div>
             </div>
@@ -561,7 +584,7 @@
               and innovation programme under the Marie Skłodowska-Curie grant
               agreement No.860768 (<a href="https://www.clipe-itn.eu/"
                 >CLIPE Project</a
-              >). <br /><br/>
+              >). <br /><br />
               MJB has received research gift funds from Adobe, Intel, Nvidia,
               Meta/Facebook, and Amazon. MJB has financial interests in Amazon,
               Datagen Technologies, and Meshcapade GmbH. While MJB is a
