--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                 <span style="color: #10768c">O</span>btained from
                 <span style="color: #10768c">N</span>ormals
               </h1>
+              <h1 class="is-size-3"><strong style="color: brown">CVPR 2023</strong></h1>
               <div class="is-size-5 publication-authors">
                 <span class="author-block">
                   <a href="http://xiuyuliang.cn/">Yuliang Xiu</a
@@ -601,12 +602,12 @@
       <div class="container is-max-desktop content">
         <h2 class="title">BibTeX</h2>
         <pre>
-<code>@article{xiu2022econ,
-  title={{ECON: Explicit Clothed humans Obtained from Normals}},
-  author={Xiu, Yuliang and Yang, Jinlong and Cao, Xu and Tzionas, Dimitrios and Black, Michael J.},
-  year={2022}
-  journal={{arXiv}:2212.07422},
-}
+<code>@inproceedings{xiu2023econ,
+  title     = {{ECON: Explicit Clothed humans Obtained from Normals}},
+  author    = {Xiu, Yuliang and Yang, Jinlong and Cao, Xu and Tzionas, Dimitrios and Black, Michael J.},
+  booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+  month     = {June},
+  year      = {2023},
 }</code></pre>
       </div>
     </section>
