--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <span style="color: #10768c">O</span>btained from
                 <span style="color: #10768c">N</span>ormals
               </h1>
-              <h1 class="is-size-3"><strong style="color: brown">CVPR 2023</strong></h1>
+              <h1 class="is-size-3"><strong style="color: brown">CVPR 2023 (Highlight)</strong></h1>
               <div class="is-size-5 publication-authors">
                 <span class="author-block">
                   <a href="http://xiuyuliang.cn/">Yuliang Xiu</a
