--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8" />
     <meta
       name="description"
-      content="ECON: Explicit Clothed humans Obtained from Normals"
+      content="ECON: Explicit Clothed humans Optimized via Normal integration"
     />
     <meta
       name="keywords"
       content="ECON, ICON, Neural Fields, Virtual Avatars, Human Digitization, Metaverse"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>ECON: Explicit Clothed humans Obtained from Normals</title>
+    <title>ECON: Explicit Clothed humans Optimized via Normal integration</title>
 
     <!-- Google tag (gtag.js) -->
     <script
@@ -603,7 +603,7 @@
         <h2 class="title">BibTeX</h2>
         <pre>
 <code>@inproceedings{xiu2023econ,
-  title     = {{ECON: Explicit Clothed humans Obtained from Normals}},
+  title     = {{ECON: Explicit Clothed humans Optimized via Normal integration}},
   author    = {Xiu, Yuliang and Yang, Jinlong and Cao, Xu and Tzionas, Dimitrios and Black, Michael J.},
   booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
   month     = {June},
