--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                 <span style="color: #10768c">ECON</span>:
                 <span style="color: #10768c">E</span>xplicit
                 <span style="color: #10768c">C</span>lothed humans<br />
-                <span style="color: #10768c">O</span>btained from
-                <span style="color: #10768c">N</span>ormals
+                <span style="color: #10768c">O</span>ptimized via
+                <span style="color: #10768c">N</span>ormal integration
               </h1>
               <h1 class="is-size-3"><strong style="color: brown">CVPR 2023 (Highlight)</strong></h1>
               <div class="is-size-5 publication-authors">
