--- a/index.html
+++ b/index.html
@@ -200,6 +200,19 @@
                       <span>Google Colab</span>
                     </a>
                   </span>
+                  
+                  <span class="link-block">
+                    <a
+                      href="https://huggingface.co/spaces/Yuliang/ECON"
+                      class="external-link button is-normal is-rounded"
+                      style="background: #ffbf00"
+                    >
+                      <span class="icon">
+                        <i class="far fa-grin-tears"></i>
+                      </span>
+                      <span>HuggingFace</span>
+                    </a>
+                  </span>
                   <span class="link-block">
                     <a
                       href="https://discord.gg/Vqa7KBGRyk"
