--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       content="ECON, ICON, Neural Fields, Virtual Avatars, Human Digitization, Metaverse"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>ECON: Explicit Clothed humans Optimized via Normal integration</title>
+    <title>
+      ECON: Explicit Clothed humans Optimized via Normal integration
+    </title>
 
     <!-- Google tag (gtag.js) -->
     <script
@@ -98,7 +100,9 @@
                 <span style="color: #10768c">O</span>ptimized via
                 <span style="color: #10768c">N</span>ormal integration
               </h1>
-              <h1 class="is-size-3"><strong style="color: brown">CVPR 2023 (Highlight)</strong></h1>
+              <h1 class="is-size-3">
+                <strong style="color: brown">CVPR 2023 (Highlight)</strong>
+              </h1>
               <div class="is-size-5 publication-authors">
                 <span class="author-block">
                   <a href="http://xiuyuliang.cn/">Yuliang Xiu</a
@@ -151,7 +155,7 @@
                   </span>
                   <span class="link-block">
                     <a
-                      href="https://www.youtube.com/watch?v=j5hw4tsWpoY"
+                      href="https://youtu.be/EWikJyvonZY"
                       class="external-link button is-normal is-rounded is-dark"
                     >
                       <span class="icon">
@@ -188,6 +192,7 @@
                       <span>Code</span>
                     </a>
                   </span>
+                  <br />
                   <span class="link-block">
                     <a
                       href="https://colab.research.google.com/drive/1YRgwoRCZIrSB2e7auEWFyG10Xzjbrbno?usp=sharing"
@@ -200,7 +205,7 @@
                       <span>Google Colab</span>
                     </a>
                   </span>
-                  
+
                   <span class="link-block">
                     <a
                       href="https://huggingface.co/spaces/Yuliang/ECON"
@@ -213,7 +218,7 @@
                       <span>HuggingFace</span>
                     </a>
                   </span>
-                  <span class="link-block">
+                  <!-- <span class="link-block">
                     <a
                       href="https://discord.gg/Vqa7KBGRyk"
                       class="external-link button is-normal is-rounded"
@@ -223,6 +228,42 @@
                         <i class="fab fa-discord"></i>
                       </span>
                       <span>Discord</span>
+                    </a>
+                  </span> -->
+                  <span class="link-block">
+                    <a
+                      href="https://github.com/YuliangXiu/ECON/blob/master/docs/installation-windows.md"
+                      class="external-link button is-normal is-rounded"
+                      style="background: #087cd4"
+                    >
+                      <span class="icon">
+                        <i class="fab fa-windows"></i>
+                      </span>
+                      <span>Windows</span>
+                    </a>
+                  </span>
+                  <span class="link-block">
+                    <a
+                      href="https://carlosedubarreto.gumroad.com/l/CEB_ECON"
+                      class="external-link button is-normal is-rounded"
+                      style="background: #ec7404"
+                    >
+                      <span class="icon">
+                        <i class="fa fa-palette"></i>
+                      </span>
+                      <span>Blender</span>
+                    </a>
+                  </span>
+                  <span class="link-block">
+                    <a
+                      href="https://github.com/YuliangXiu/ECON/blob/master/docs/installation-docker.md"
+                      class="external-link button is-normal is-rounded"
+                      style="background: #0db7ed"
+                    >
+                      <span class="icon">
+                        <i class="fab fa-docker"></i>
+                      </span>
+                      <span>Docker</span>
                     </a>
                   </span>
                 </div>
@@ -443,15 +484,27 @@
         <!-- Paper video. -->
         <div class="columns is-centered has-text-centered">
           <div class="column is-four-fifths">
-            <h2 class="title is-3">Video</h2>
+            <h2 class="title is-3">Video (English)</h2>
             <div class="publication-video">
               <iframe
-                src="https://www.youtube.com/embed/j5hw4tsWpoY"
+                src="https://www.youtube.com/embed/EWikJyvonZY"
                 title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen
               ></iframe>
+            </div>
+            <br /><br />
+            <h2 class="title is-3">Video (中文)</h2>
+            <div class="publication-video">
+              <iframe
+                src="//player.bilibili.com/player.html?aid=911445212&bvid=BV1NM4y1B7UN&cid=1139378578&page=1"
+                title="Bilibili video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              >
+              </iframe>
             </div>
           </div>
         </div>
@@ -506,10 +559,10 @@
               </tr>
               <tr>
                 <th>
-                  Pseudo 3D Ground-truth for
+                  ECON as "3D Guidance" in
                   <a href="https://stylegan-human.github.io/">SHHQ Dataset</a>
                 </th>
-                <th>Multi-person Reconstruction</th>
+                <th>Multi-person w/ Occlusion</th>
               </tr>
             </table>
           </div>
@@ -608,6 +661,40 @@
           </div>
         </div>
         <!-- Acknowledgments. -->
+
+        <!-- Contact. -->
+        <div class="columns is-centered has-text-centered">
+          <div class="column is-full-width">
+            <h2 class="title is-3">
+              Contact
+              <span class="link-block">
+                <a
+                  href="https://discord.gg/Vqa7KBGRyk"
+                  class="external-link button is-normal is-rounded"
+                  style="background: #d462ff"
+                >
+                  <span class="icon">
+                    <i class="fab fa-discord"></i>
+                  </span>
+                  <span>Discord</span>
+                </a>
+              </span>
+            </h2>
+
+            <div class="content has-text-justified">
+              For technical questions, please contact
+              <a href="mailto: yuliang.xiu@tue.mpg.de"
+                >yuliang.xiu@tue.mpg.de</a
+              >
+              <br />
+
+              For commercial licensing, please contact
+              <a href="mailto: ps-licensing@tue.mpg.de"
+                >ps-licensing@tue.mpg.de</a
+              >
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
