--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
             <h2 class="title is-3">Video (中文)</h2>
             <div class="publication-video">
               <iframe
-                src="//player.bilibili.com/player.html?aid=911445212&bvid=BV1NM4y1B7UN&cid=1139378578&page=1"
+                src="//player.bilibili.com/player.html?aid=911445212&bvid=BV1NM4y1B7UN&cid=1139378578&page=1&autoplay=0"
                 title="Bilibili video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
