--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                   </span>
                   <span class="link-block">
                     <a
-                      href="https://youtu.be/EWikJyvonZY"
+                      href="https://youtu.be/5PEd_p90kS0"
                       class="external-link button is-normal is-rounded is-dark"
                     >
                       <span class="icon">
@@ -487,7 +487,7 @@
             <h2 class="title is-3">Video (English)</h2>
             <div class="publication-video">
               <iframe
-                src="https://www.youtube.com/embed/EWikJyvonZY"
+                src="https://www.youtube.com/embed/5PEd_p90kS0"
                 title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
