--- a/index.html
+++ b/index.html
@@ -744,7 +744,14 @@
                 For technical questions, please contact
                 <a href="mailto: yuliang.xiu@tue.mpg.de">Yuliang Xiu</a><br />
                 For commercial licensing, please contact
-                <a href="mailto: ps-licensing@tue.mpg.de">ps-licensing</a>
+                <a href="mailto: ps-licensing@tue.mpg.de">ps-licensing</a><br />
+                <small
+                  >© 2023 Max-Planck-Gesellschaft
+                  <small class="text-muted ml-1 mr-1">-</small
+                  ><a href="imprint.html">Imprint</a
+                  ><small class="text-muted ml-1 mr-1">-</small
+                  ><a href="privacy-policy.html">Privacy Policy</a></small
+                >
               </p>
             </div>
           </div>
