--- a/index.html
+++ b/index.html
@@ -564,6 +564,35 @@
                 </th>
                 <th>Multi-person w/ Occlusion</th>
               </tr>
+
+              <tr>
+                <th>
+                  <img
+                    src="./static/teaser/blender-demo.gif"
+                    class="rounded-corners"
+                  />
+                </th>
+                <th>
+                  <img
+                    src="./static/teaser/animation.gif"
+                    class="rounded-corners"
+                  />
+                </th>
+              </tr>
+              <tr>
+                <th>
+                  "All-in-One"
+                  <a href="https://github.com/kwan3854/CEB_ECON"
+                    >Blender add-on</a
+                  >
+                </th>
+                <th>
+                  SMPL-X based Animation (<a
+                    href="https://github.com/YuliangXiu/ECON#animation-with-smpl-x-sequences-econ--hybrik-x"
+                    >Instruction</a
+                  >)
+                </th>
+              </tr>
             </table>
           </div>
         </div>
