--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script defer src="./static/js/fontawesome.all.min.js"></script>
+    <script
+      src="https://kit.fontawesome.com/57fb8d417e.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="./static/js/bulma-carousel.min.js"></script>
     <script src="./static/js/bulma-slider.min.js"></script>
     <script src="https://unpkg.com/interactjs/dist/interact.min.js"></script>
@@ -484,7 +488,7 @@
         <!-- Paper video. -->
         <div class="columns is-centered has-text-centered">
           <div class="column is-four-fifths">
-            <h2 class="title is-3">Video (English)</h2>
+            <h2 class="title is-3">Intro Video (English)</h2>
             <div class="publication-video">
               <iframe
                 src="https://www.youtube.com/embed/5PEd_p90kS0"
@@ -495,7 +499,7 @@
               ></iframe>
             </div>
             <br /><br />
-            <h2 class="title is-3">Video (中文)</h2>
+            <h2 class="title is-3"> Talk on ECON+ICON (中文)</h2>
             <div class="publication-video">
               <iframe
                 src="//player.bilibili.com/player.html?aid=911445212&bvid=BV1NM4y1B7UN&cid=1139378578&page=1&autoplay=0"
@@ -506,6 +510,18 @@
               >
               </iframe>
             </div>
+            <br><br>
+            <h2 class="title is-3">Rasputin Demo (ECON + HybrIK-X)</h2>
+            <div class="publication-video">
+              <iframe
+                src="https://www.youtube.com/embed/dxDxdIQIYvQ"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <br /><br />
           </div>
         </div>
         <!--/ Paper video. -->
@@ -536,6 +552,8 @@
               optional face or hands from $\mathcal{M}^\text{b}$, screened
               Poisson combines above all as final watertight $\mathcal{R}$.
             </div>
+            <a href="https://zhuanlan.zhihu.com/p/626295986"><span class="fa-brands fa-zhihu fa-2xl"></span> <strong>CVPR'23 (Highlight) | ECON: 一个数字人，显式隐式各自表述</strong></a>
+            
           </div>
         </div>
 
