--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
               ></iframe>
             </div>
             <br /><br />
-            <h2 class="title is-3"> Talk on ECON+ICON (中文)</h2>
+            <h2 class="title is-3">Talk on ECON+ICON (中文)</h2>
             <div class="publication-video">
               <iframe
                 src="//player.bilibili.com/player.html?aid=911445212&bvid=BV1NM4y1B7UN&cid=1139378578&page=1&autoplay=0"
@@ -510,7 +510,7 @@
               >
               </iframe>
             </div>
-            <br><br>
+            <br /><br />
             <h2 class="title is-3">Rasputin Demo (ECON + HybrIK-X)</h2>
             <div class="publication-video">
               <iframe
@@ -552,8 +552,13 @@
               optional face or hands from $\mathcal{M}^\text{b}$, screened
               Poisson combines above all as final watertight $\mathcal{R}$.
             </div>
-            <a href="https://zhuanlan.zhihu.com/p/626295986"><span class="fa-brands fa-zhihu fa-2xl"></span> <strong>CVPR'23 (Highlight) | ECON: 一个数字人，显式隐式各自表述</strong></a>
-            
+            <a href="https://zhuanlan.zhihu.com/p/626295986"
+              ><span class="fa-brands fa-zhihu fa-2xl"></span>
+              <strong
+                >CVPR'23 (Highlight) | ECON:
+                一个数字人，显式隐式各自表述</strong
+              ></a
+            >
           </div>
         </div>
 
