--- a/index.html
+++ b/index.html
@@ -152,6 +152,17 @@
                       class="external-link button is-normal is-rounded is-dark"
                     >
                       <span class="icon">
+                        <i class="fa-solid fa-book-bookmark"></i>
+                      </span>
+                      <span>arXiv</span>
+                    </a>
+                  </span>
+                  <span class="link-block">
+                    <a
+                      href="https://openaccess.thecvf.com/content/CVPR2023/html/Xiu_ECON_Explicit_Clothed_Humans_Optimized_via_Normal_Integration_CVPR_2023_paper.html"
+                      class="external-link button is-normal is-rounded is-dark"
+                    >
+                      <span class="icon">
                         <i class="fas fa-file-pdf"></i>
                       </span>
                       <span>Paper</span>
