--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                       class="external-link button is-normal is-rounded is-dark"
                     >
                       <span class="icon">
-                        <i class="fa-solid fa-book-bookmark"></i>
+                        <i class="ai ai-arxiv"></i>
                       </span>
                       <span>arXiv</span>
                     </a>
